1.10:
-----
    * Remove abandoned ping services from options
    * Remove fallback code for HTTP/Request, as that was removed from Serendipity
    * Restore options form for the entry editor

1.09:
-----
    * Added serendipity_request_url API method